[workspace]
members = [
    ".",
    "submodules/*",
]

[workspace.dependencies]
winit = "0.29.0"
vulkano = { git = "https://github.com/vulkano-rs/vulkano", branch = "master"}
vulkano-win = { git = "https://github.com/vulkano-rs/vulkano", branch = "master"}
vulkano-util = { git = "https://github.com/vulkano-rs/vulkano", branch = "master"}
vulkano-macros = { git = "https://github.com/vulkano-rs/vulkano", branch = "master"}
vulkano-shaders = { git = "https://github.com/vulkano-rs/vulkano", branch = "master"}

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[package]
name = "vrac"
version = "0.1.0"
# authors = [ "Vraccer" ]
edition = "2021"
license = "MIT"
description = "The windowing system of Vrac"
documentation = "https://docs.rs/vrac"
repository = "https://github.com/VRACware/vrac"
readme = "README.md"
keywords = ["vulkan", "GUI"]
categories = ["rendering::engine"]

[dependencies]
vulkano = { workspace = true }
vulkano-util = { workspace = true }
winit = { workspace = true }

[profile.dev]
opt-level = 1
lto = false

[profile.release]
opt-level = 3
lto = true

[[bench]]
name = "bench"
harness = false
